--- a/app/src/main/res/xml/settings_playback.xml
+++ b/app/src/main/res/xml/settings_playback.xml
@@ -5,7 +5,7 @@
 
     <PreferenceCategory android:title="@string/settings.playback_title">
 
-        <net.nullsum.audinaut.view.SeekBarPreference
+        <SeekBarPreference
             android:defaultValue="20"
             android:dialogLayout="@layout/seekbar_preference"
             android:key="randomSize"
@@ -68,7 +68,7 @@
             android:key="replayGainType"
             android:title="@string/settings.replay_gain_type" />
 
-        <net.nullsum.audinaut.view.SeekBarPreference
+        <SeekBarPreference
             android:defaultValue="150"
             android:dialogLayout="@layout/seekbar_preference"
             android:key="replayGainBump2"
@@ -78,7 +78,7 @@
             myns:min="-150"
             myns:stepSize="10" />
 
-        <net.nullsum.audinaut.view.SeekBarPreference
+        <SeekBarPreference
             android:defaultValue="150"
             android:dialogLayout="@layout/seekbar_preference"
             android:key="replayGainUntagged2"
